--- a/feed/join93-pro-feed.conf
+++ b/feed/join93-pro-feed.conf
@@ -1,1 +1,1 @@
-src/gz join93-pro-feed https://gitfront.io/r/eliesat/xeFZ1oNY38TL/pro/raw/feed/join93-pro-feed.conf
+src/gz join93-pro-feed https://gitfront.io/r/eliesat/xeFZ1oNY38TL/pro/raw/feed/
